--- a/store/templates/car-types.html
+++ b/store/templates/car-types.html
@@ -1,3 +1,6 @@
 {% for type in types %}
     Brand: {{ type.brand }} | Model: {{ type.model_auto }} | Price: {{ type.price }} | <br>
 {% endfor %}
+<div>
+    <a href="{% url "car_form" %}">Create new car</a>
+</div>
