--- a/store/templates/cars.html
+++ b/store/templates/cars.html
@@ -5,3 +5,6 @@
     Year: {{ car.year }} |
     Price: {{ car.car_type.price }} | <br>
 {% endfor %}
+<div>
+    <a href="{% url "client_form" %}">Create new client</a>
+</div>
