--- a/store/templates/cars.html
+++ b/store/templates/cars.html
@@ -6,5 +6,5 @@
     Price: {{ car.car_type.price }} | <br>
 {% endfor %}
 <div>
-    <a href="{% url "client_form" %}">Create new client</a>
+    <a href="{% url "dealer_form" %}">Create new dealer</a>
 </div>
