--- a/store/templates/clients.html
+++ b/store/templates/clients.html
@@ -2,5 +2,5 @@
     Name: {{ client.name }} | Phone: {{ client.phone }} | E-mail: {{ client.email }} | <br>
 {% endfor %}
 <div>
-    <a href="{% url "dealer_form" %}">Create new dealer</a>
+    <a href="{% url "car_type_form" %}">Create new car type</a>
 </div>
