--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h2>Hello from Heroku</h2>
+{% extends "base.html" %}
+{% load static %}
+
+{% block content %}
+
+    <h2>Hello {{ user.username }}</h2>
     <div>
         <a href="{% url "client_form" %}">Create new client</a>
     </div>
-</body>
-</html>
+
+{% endblock %}
