--- a/store/templates/registration/login.html
+++ b/store/templates/registration/login.html
@@ -32,7 +32,6 @@
         <input type="submit" value="login">
         <input type="hidden" name="next" value="{{ next }}">
     </form>
-{##}
-{#    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>#}
+    <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
 
 {% endblock %}
