Add password reset logic

--- a/store/templates/registration/password_reset_form.html
+++ b/store/templates/registration/password_reset_form.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block content %}
     <div class="form-content my-3 p-3">
         <div class="container">
@@ -58,4 +57,4 @@
         </div>
 
     </div>
-{% endblock %}
+{% endblock content %}
